
2017-10-17  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* testada execução da aplicação da lista com sucesso
	* Testando lista de aplicações

2017-10-16  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Testando um botão na janela transparente
	* Window transparente funcionando